Add Contact info page

--- a/grend/home/templates/home/home.html
+++ b/grend/home/templates/home/home.html
@@ -10,8 +10,8 @@
 <div id="navbar">
 	<ul>
 	  <li><a class="active" href="{% url "homeView" %}">Heim</a></li>
-	  <li><a href="{% url "PriceView" %}">Priser</a></li>
-	  <li><a href="#">Kontakt Info</a></li>
+	  <li><a href="{% url "PriceView" %}">Prisar</a></li>
+	  <li><a href="{% url "ContactInfoView" %}">Kontakt Info</a></li>
 	  <li><a href="#">Kommande arangement</a></li>
 	</ul>
 </div>
