--- a/grend/home/templates/home/prices.html
+++ b/grend/home/templates/home/prices.html
@@ -9,8 +9,8 @@
 
 <ul>
   <li><a href="{% url "homeView" %}">Heim</a></li>
-  <li><a class="active" href="{% url "PriceView" %}">Priser</a></li>
-  <li><a href="#">Kontakt Info</a></li>
+  <li><a class="active" href="{% url "PriceView" %}">Prisar</a></li>
+  <li><a href="{% url "ContactInfoView" %}">Kontakt Info</a></li>
   <li><a href="#">Kommande arangement</a></li>
 </ul>
 
